--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "mysql2": "^1.7.0",
     "pug": "^2.0.4",
     "sequelize": "^5.18.0",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.2.1"
   }
 }
